# ICP-projekt

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/praktyka_backend/: Cargo.toml  praktyka_backend.did
src/praktyka_backend/src/: lib.rs  uzytkownicy.rs
src/praktyka_frontend/: package.json
src/praktyka_frontend/src/: App.vue  main.js
