[package]
name = "praktyka_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
bcrypt = "0.12"
uuid = { version = "1.0", features = ["v4"] }
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }